# finance

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  ui.rs  yfin.rs  yfinance.rs
