[package]
name = "finance"
version = "0.1.0"
authors = ["DefunctLizard <grantshandy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0"
gio = "^0"
glib = "^0"
yahoo_finance_api = { git = "https://github.com/DefunctLizard/yahoo_finance_api" }
tokio-test = "0.2.1"
